[package]
name = "rocket_lamb"
description = "A crate to allow running a Rocket webserver as an AWS Lambda Function with API Gateway"
repository = "https://github.com/GREsau/rocket-lamb"
version = "0.6.0"
authors = ["Graham Esau <gesau@hotmail.co.uk>"]
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["rocket", "web", "lambda"]
categories = ["web-programming::http-server"]

[badges]
travis-ci = { repository = "GREsau/rocket-lamb" }

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", default-features = false }
lamedh_runtime = "0.3.0"
lamedh_http = "0.3.0"
http = "0.2.3"
failure = "0.1.5"
aws_lambda_events = "0.4.0"
tokio = "1"

[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1", features = ["test-util"] }
tokio-test = "0.4.0"
